--- a/sidebar/sidebar2.html
+++ b/sidebar/sidebar2.html
@@ -1,8 +1,19 @@
-<nav class="sidebar close">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+</head>
+<body>
+    <nav class="sidebar close">
         <header>
             <div class="image-text">
                 <span class="image">
-                    <!--<img src="logo.png" alt="">-->
+                    <img src="logo.png" alt="">
                 </span>
 
                 <div class="text logo-text">
@@ -96,3 +107,6 @@
     <section class="home">
         <div class="text">Dashboard Sidebar</div>
     </section>
+</body>
+<script src="./script.js"></script>
+</html>
