--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -4,17 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Flexbox</title>
 </head>
 <body>
     <div class="flex-container">
-        <div class="flex-item">Lorem</div>
-        <div class="flex-item">Dois</div>
-        <div class="flex-item">Três</div>
-        <div class="flex-item">Quatro</div>
-        <div class="flex-item">Cinco</div>
+        <div class="flex-item">
+            <form>
+                <label for="nome" class="input-label">Digite seu nome: </label>
+                <input type="text" name="nome" id="nome" class="input" placeholder="Digite seu nome"><br>
+                <label for="email" class="input-label">Digite seu melhor email: </label>
+                <input type="email" name="email" id="email" class="input" placeholder="usuario@teste.com"><br>
+                <label for="senha" class="input-label">Digite sua senha: </label>
+                <input type="password" id="password" name="password" class="input" placeholder="*******"><br>
+                <label for="confirmPassword" class="input-label">Repita sua senha</label>
+                <input type="password" class="input" id="confirmPassword" placeholder="*******" onblur="passwordValidator()" required><br>
+                <input value="Submit" class="btn btn-info button" id="formValidator" onclick="loginValidator()">
+            </form>
+        </div>
+        <div class="flex-item">            <form>
+            <label for="nome" class="input-label">Digite seu nome: </label>
+            <input type="text" name="nome" id="nome" class="input" placeholder="Digite seu nome"><br>
+            <label for="email" class="input-label">Digite seu melhor email: </label>
+            <input type="email" name="email" id="email" class="input" placeholder="usuario@teste.com"><br>
+            <label for="senha" class="input-label">Digite sua senha: </label>
+            <input type="password" id="password" name="password" class="input" placeholder="*******"><br>
+            <label for="confirmPassword" class="input-label">Repita sua senha</label>
+            <input type="password" class="input" id="confirmPassword" placeholder="*******" onblur="passwordValidator()" required><br>
+            <input value="Submit" class="btn btn-info button" id="formValidator" onclick="loginValidator()">
+        </form></div>
+        <div class="flex-item">            
+            <form>
+                <label for="nome" class="input-label">Digite seu nome: </label>
+                <input type="text" name="nome" id="nome" class="input" placeholder="Digite seu nome"><br>
+                <label for="email" class="input-label">Digite seu melhor email: </label>
+                <input type="email" name="email" id="email" class="input" placeholder="usuario@teste.com"><br>
+                <label for="senha" class="input-label">Digite sua senha: </label>
+                <input type="password" id="password" name="password" class="input" placeholder="*******"><br>
+                <label for="confirmPassword" class="input-label">Repita sua senha</label>
+                <input type="password" class="input" id="confirmPassword" placeholder="*******" onblur="passwordValidator()" required><br>
+                <input value="Submit" class="btn btn-info button" id="formValidator" onclick="loginValidator()">
+            </form>
+        </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
