add last updates

--- a/dashboard2/index.html
+++ b/dashboard2/index.html
@@ -48,8 +48,9 @@
             </div><br><br><br>
         </section>
         <div class="row">
-            <h2>Frequência de Tickets</h2>
-            <div class="col-md-8">
+            
+            <div class="col-md-7">
+                <span class="h4">Frequência de Tickets</span>
                 <div class="graphics">
                     <div class="header-graphics">
                         <a href="#" class="header-font">Semana</a>
@@ -78,11 +79,41 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-5">
+                <span class="h4">Últimas atualizações</span>
                 <div class="card card-perfil">
                     <ul class="list-group list-group-flush">
+                        <li class="list-group-item" style="border-top: 1px solid rgba(63, 61, 86, 0.1);">
+                            <div class="direction-left">
+                                <span class="name-perfil">Caio Texeira</span>
+                                    <span class="min">13 Min. atrás</span>
+                                <h4>Abriu um ticket</h4>
+                            </div>
+                        </li>
                         <li class="list-group-item">
-                            <img src="img/icone.png">
+                            <div class="direction-left">
+                                <span class="name-perfil">Caio Texeira</span>
+                                    <span class="min">13 Min. atrás</span>
+                                <h4>Abriu um ticket</h4>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="direction-left">
+                                <span class="name-perfil">Caio Texeira</span>
+                                    <span class="min">13 Min. atrás</span>
+                                <h4>Abriu um ticket</h4>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="direction-left">
+                                <span class="name-perfil">Caio Texeira</span>
+                                    <span class="min">13 Min. atrás</span>
+                                <h4>Abriu um ticket</h4>
+                                <hr>
+                            </div>
+                            <div class="see-more">
+                                <a href="#">Ver mais</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
