--- a/dashboard2/index.html
+++ b/dashboard2/index.html
@@ -85,28 +85,32 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item" style="border-top: 1px solid rgba(63, 61, 86, 0.1);">
                             <div class="direction-left">
+                                <img src="./img/perfil.png">
                                 <span class="name-perfil">Caio Texeira</span>
+                                <span class="min">13 Min. atrás</span>
+                                <h4>Abriu um ticket</h4>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="direction-left">
+                                <img src="./img/perfil.png">
+                                <span class="name-perfil">Filipe Viana</span>
                                     <span class="min">13 Min. atrás</span>
                                 <h4>Abriu um ticket</h4>
                             </div>
                         </li>
                         <li class="list-group-item">
                             <div class="direction-left">
-                                <span class="name-perfil">Caio Texeira</span>
+                                <img src="./img/perfil.png">
+                                <span class="name-perfil">Jorge Bichara</span>
                                     <span class="min">13 Min. atrás</span>
                                 <h4>Abriu um ticket</h4>
                             </div>
                         </li>
                         <li class="list-group-item">
                             <div class="direction-left">
-                                <span class="name-perfil">Caio Texeira</span>
-                                    <span class="min">13 Min. atrás</span>
-                                <h4>Abriu um ticket</h4>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="direction-left">
-                                <span class="name-perfil">Caio Texeira</span>
+                                <img src="./img/perfil.png">
+                                <span class="name-perfil">Warley Santos</span>
                                     <span class="min">13 Min. atrás</span>
                                 <h4>Abriu um ticket</h4>
                                 <hr>
