--- a/dashboard2/index.html
+++ b/dashboard2/index.html
@@ -45,7 +45,7 @@
                         <span class="card-subtitle mb-2">Tickets Resolvidos</span> 
                     </div>
                 </div>
-            </div><br><br><br>
+            </div>
         </section>
         <div class="row">
             
