--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -11,11 +11,32 @@
         <div id="title">
             <h1>Marketing</h1>
             <h1>Criativa</h1>
-        </div>[
+        </div>
         
         <ul>
             <a href="#"><li>Início</li></a>
+            <a href="#"><li>Serviços</li></a>
+            <a href="#"><li>Sobre</li></a>
+            <a href="#"><li>Contato</li></a>
+            <a href="#"><li>Possui conta?</li></a>
         </ul>
     </header>
+
+    <main>
+        <aside>
+            <h2>Inscreva-se Agora!</h2>
+            <h2>na Newslatter</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, neque!
+                Quod consequuntur officiis sint dicta vel ab iste aspernatur
+                voluptas modi autem dignissimos distinctio suscipit illo excepturi corporis amet aliquid.
+            </p>
+            <form>
+                <input type="text" placeholder="Nome">
+                <input type="email" placeholder="E-mail">
+            </form>
+        </aside>
+    </main>
+
 </body>
 </html>
