--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
@@ -18,13 +19,13 @@
             <a href="#"><li>Serviços</li></a>
             <a href="#"><li>Sobre</li></a>
             <a href="#"><li>Contato</li></a>
-            <a href="#"><li>Possui conta?</li></a>
+            <a href="#" id="inscreva-se"><li>Possui conta?</li></a>
         </ul>
     </header>
 
     <main>
         <aside>
-            <h2>Inscreva-se Agora!</h2>
+            <h2><span>Inscreva-se Agora!</span></h2>
             <h2>na Newslatter</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, neque!
@@ -34,8 +35,12 @@
             <form>
                 <input type="text" placeholder="Nome">
                 <input type="email" placeholder="E-mail">
+                <input type="submit" value="Enviar Formulário">
             </form>
         </aside>
+        <article>
+            <img src="img.png" alt="purple-women">
+        </article>
     </main>
 
 </body>
